WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256438
REGRESSION (
244460@main
): Stop using RetainPtr<>::autorelease() in createNSArray() lambda
https://bugs.webkit.org/show_bug.cgi?id=256438
Summary
REGRESSION (244460@main): Stop using RetainPtr<>::autorelease() in createNSAr...
David Kilzer (:ddkilzer)
Reported
2023-05-07 20:09:34 PDT
Stop using RetainPtr<>::autorelease() in createNSArray() lambda. This is not necessary: - (NSArray<_WKApplicationManifestIcon *> *)icons { return createNSArray(_applicationManifest->applicationManifest().icons, [] (auto& coreIcon) -> id { return adoptNS([[_WKApplicationManifestIcon alloc] initWithCoreIcon:&coreIcon]).autorelease(); }).autorelease(); } in Source/WebKit/UIProcess/API/Cocoa/_WKApplicationManifest.mm. Regressed in: Add support for web app manifest icons in WebKit/UI Process layer <
https://bugs.webkit.org/show_bug.cgi?id=233350
> <
rdar://problem/84311569
> <
https://commits.webkit.org/244460@main
>
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-05-07 20:11:01 PDT
<
rdar://problem/109022629
>
David Kilzer (:ddkilzer)
Comment 2
2023-05-07 20:16:12 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13559
EWS
Comment 3
2023-05-08 01:21:41 PDT
Committed
263786@main
(d57e039ea711): <
https://commits.webkit.org/263786@main
> Reviewed commits have been landed. Closing PR #13559 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug