REGRESSION (244460@main): Stop using RetainPtr<>::autorelease() in createNSArray() lambda https://bugs.webkit.org/show_bug.cgi?id=256438 <rdar://109022629>

Reviewed by Chris Dumez.

This prevents these objects from being put into an
autoreleasePool, and may fix a false-postive leak reported by
clang static analyzer.

* Source/WebKit/UIProcess/API/Cocoa/_WKApplicationManifest.mm:
(-[_WKApplicationManifest icons]):
- Remove use of RetainPtr<>::autorelease() in createNSArray().

Canonical link: https://commits.webkit.org/263786@main